Fix FeedPage alignment

--- a/src/pages/FeedPage/FeedPage.module.scss
+++ b/src/pages/FeedPage/FeedPage.module.scss
@@ -2,6 +2,7 @@
 	@include flex-column(center, flex-start);
 
 	// FIXME get rid of !important
+	align-items: center !important;
 	background-color: transparent !important;
 	box-shadow: unset !important;
 
